import com.github.davidmc24.gradle.plugin.avro.GenerateAvroJavaTask

plugins {
    id 'java'
    id 'org.springframework.boot' version "$springBootVersion"
    id 'io.spring.dependency-management' version "$springDependencyManagementVersion"
    id 'com.github.davidmc24.gradle.plugin.avro' version "$avroPluginVersion"
    id 'jacoco'
}

group = 'com.github.alexkiyanov.iotplatform'
version = "$appVersion"
description = 'Events collector service for IoT platform'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        url 'https://packages.confluent.io/maven/'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-cassandra'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation "io.confluent:kafka-avro-serializer:$avroSerializerVersion"
    implementation "org.apache.avro:avro:1.11.3"
    implementation("com.github.ben-manes.caffeine:caffeine:$caffeineVersion")
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    // Test dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
    testImplementation 'org.testcontainers:kafka:1.21.3'
    testImplementation 'org.testcontainers:cassandra:1.21.3'
    testImplementation 'org.testcontainers:postgresql:1.21.3'
    testImplementation 'org.mockito:mockito-core:5.8.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

avro {
    createSetters = true
    fieldVisibility = 'PRIVATE'
    stringType = 'String'
}

sourceSets {
    main {
        java {
            srcDirs += ['src/main/java']
        }
    }
}

tasks.register('generateAvroClasses', GenerateAvroJavaTask) {
    source = fileTree(dir: "src/main/resources/avro", include: "**/*.avsc")
    outputDir = file("src/main/java")
    fieldVisibility = 'PRIVATE'
    createSetters = true
    stringType = 'String'
}

compileJava.dependsOn generateAvroClasses

clean {
    delete 'src/main/java/com/github/alexkiyanov/iotplatform/ecs/avro'
}

tasks.named('test') {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
    
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                // Исключаем автогенерируемые Avro классы
                '**/avro/**',
                // Исключаем классы конфигурации
                '**/config/**',
                // Исключаем главный класс приложения
                '**/EventsCollectorServiceApplication.class',
                // Исключаем модели/сущности (POJO/DTO)
                '**/model/**'
            ])
        }))
    }
}

jacocoTestCoverageVerification {
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                // Исключаем автогенерируемые Avro классы
                '**/avro/**',
                // Исключаем классы конфигурации
                '**/config/**',
                // Исключаем главный класс приложения
                '**/EventsCollectorServiceApplication.class',
                // Исключаем модели/сущности (POJO/DTO)
                '**/model/**'
            ])
        }))
    }
    
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.90
            }
        }
        rule {
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.90
            }
        }
    }
}

test.finalizedBy jacocoTestCoverageVerification
